--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "dan",
+  "name": "my_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-media": "^1.9.2",
+    "react-responsive-carousel": "^3.1.47",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,16 +24,12 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "proxy": "http://localhost:4500/",
+  "main": "server/server.js"
 }
